--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 							<i class="fa fa-home" aria-hidden="true"></i>
 						</button>
 						<button id="home" class="sidebar-button sidebar-button-active" data-toggle="tooltip" data-placement="right" title="Accueil" onclick="require('./js/Application').requestHtml('TEST')">
-							<i class="fa fa-home" aria-hidden="true"></i>
+							$TEST$
 						</button>
 						<button id="game" class="sidebar-button" data-toggle="tooltip" data-placement="right" title="Jouer" onclick="require('./js/Application').requestHtml('GAME')">
 							$f(x)$
